@@ -4,6 +4,7 @@ libHX 1.19 (July 16 2008)
 =========================
 - need to use lstat() on directory operations such as mkdir and rrmdir
 - use RTLD_LAZY when opening dynamic libraries
+- add libxml_helper
 
 
 libHX 1.18 (June 10 2008)
